install express, mongoose and nodemon

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
 	"compilerOptions": {
-		"module": "NodeNext",
-		"moduleResolution": "NodeNext",
+		"module": "CommonJS",
+		"esModuleInterop": true,
 		"target": "ES2022",
 		"sourceMap": true,
-		"outDir": "dist"
+		"outDir": "dist",
+		"noEmitOnError": true
 	},
 	"include": [
 		"src/**/*"
